compiler/tests/fixtures/valid/role_with_spawn.viv
// Role with spawn directive

action create-artifact:
    roles:
        @creator:
            as: initiator
        @artifact:
            as: item, spawn
            spawn: ~createItem("artifact")
