compiler/tests/fixtures/invalid/semantics/pool_references_spawn_role.viv
// Invalid: pool directive references a spawn role

action bad-spawn-ref:
    roles:
        @actor:
            as: initiator
        @created:
            as: item, spawn
            spawn: ~createItem("widget")
        @related:
            as: item
            from: @created.parts
